Backend : feat -> Implement course management for admin. Unit test created
refactor -> add new api docmentation for admin in api.yml
