# backend/app/Features/Course/Http/Requests/CourseUpdateRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Features\Course\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class CourseUpdateRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'course_name' => ['sometimes', 'required', 'string', 'max:255'],
+            'description' => ['sometimes', 'required', 'string', 'max:255'],
+            'minimum_score' => ['sometimes', 'required', 'numeric', 'min:0', 'max:100'],
+            'status' => ['sometimes', 'required', 'string', 'max:255'],
+        ];
+    }
+}
